Спринт 5. ТЗ ShipIt